list of games are fetched from supabase, (images still broken)

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </header>
         <main>
             <section class="main-section">
-                <h2>The Games I've Played Recently</h2>
-                <div id="games-list-container"></div>
+                <h2>Some Games I've Played Recently!</h2>
+                <div id="game-list-container"></div>
             </section>
         </main>
 
