--- a/detail/index.html
+++ b/detail/index.html
@@ -7,6 +7,7 @@
         <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
         <link rel="stylesheet" href="../styles/reset.css" />
         <link rel="stylesheet" href="../styles/style.css" />
+        <link rel="stylesheet" href="./styles/home.css" />
         <title>Game Details</title>
     </head>
 </html>
