fixed link with genre and added styling in global.css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </header>
         <main>
             <section class="main-section">
-                <h2>Some Games I've Played Recently!</h2>
+                <h1>Some Games I've Played Recently</h1>
                 <div id="game-list-container"></div>
             </section>
         </main>
