--- a/detail/index.html
+++ b/detail/index.html
@@ -6,8 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
         <link rel="stylesheet" href="../styles/reset.css" />
-        <link rel="stylesheet" href="../styles/style.css" />
-        <link rel="stylesheet" href="./styles/home.css" />
+        <link rel="stylesheet" href="../styles/global.css" />
+        <link rel="stylesheet" href="../styles/home.css" />
         <title>Game Details</title>
     </head>
 </html>
